--- a/JThermodynamicData/pom.xml
+++ b/JThermodynamicData/pom.xml
@@ -7,7 +7,7 @@
   <groupId>info.esblurock</groupId>
   <artifactId>JThermodynamicData</artifactId>
   <properties>
-    <appengine.maven.plugin.version>1.3.1</appengine.maven.plugin.version>
+    <appengine.maven.plugin.version>2.4</appengine.maven.plugin.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <version>4.13.1</version>
       <scope>test</scope>
     </dependency>
   <dependency>
@@ -182,7 +182,7 @@
   	<dependency>
   		<groupId>mysql</groupId>
   		<artifactId>mysql-connector-java</artifactId>
-  		<version>8.0.15</version>
+  		<version>8.0.16</version>
   	</dependency>
   	<dependency>
   		<groupId>com.google.cloud.sql</groupId>
@@ -238,13 +238,36 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>versions-maven-plugin</artifactId>
-        <version>2.3</version>
+        <version>2.8.1</version>
         <executions>
           <execution>
             <phase>compile</phase>
             <goals>
               <goal>display-dependency-updates</goal>
               <goal>display-plugin-updates</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+          <archive>
+            <manifest>
+              <mainClass>thermo.compute.ComputeThermodynamicsFromNancyString</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
             </goals>
           </execution>
         </executions>
