Line Commands: added Test parameter, untested except Benson

--- a/JThermodynamicData/pom.xml
+++ b/JThermodynamicData/pom.xml
@@ -258,7 +258,7 @@
           </descriptorRefs>
           <archive>
             <manifest>
-              <mainClass>thermo.compute.ComputeThermodynamicsFromNancyString</mainClass>
+              <mainClass>thermo.LineCommands</mainClass>
             </manifest>
           </archive>
         </configuration>
