--- a/JThermodynamicData/pom.xml
+++ b/JThermodynamicData/pom.xml
@@ -1,283 +1,285 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
-  <version>1.0</version>
+	<modelVersion>4.0.0</modelVersion>
+	<version>1.0</version>
 
-  <groupId>info.esblurock</groupId>
-  <artifactId>JThermodynamicData</artifactId>
-  <properties>
-    <appengine.maven.plugin.version>2.4</appengine.maven.plugin.version>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-  </properties>
+	<groupId>info.esblurock</groupId>
+	<artifactId>JThermodynamicData</artifactId>
+	<properties>
+		<appengine.maven.plugin.version>2.4</appengine.maven.plugin.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
+	</properties>
 
-  <prerequisites>
-    <maven>3.3.9</maven>
-  </prerequisites>
+	<prerequisites>
+		<maven>3.3.9</maven>
+	</prerequisites>
 
-  <dependencies>
-    <!-- Compile/runtime dependencies -->
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-    </dependency>
-<dependency>
-    <groupId>com.sun.activation</groupId>
-    <artifactId>javax.activation</artifactId>
-    <version>1.2.0</version>
-</dependency>
-    <dependency>
-      <groupId>jstl</groupId>
-      <artifactId>jstl</artifactId>
-      <version>1.2</version>
-    </dependency>
+	<dependencies>
+		<!-- Compile/runtime dependencies -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.activation</groupId>
+			<artifactId>javax.activation</artifactId>
+			<version>1.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>jstl</groupId>
+			<artifactId>jstl</artifactId>
+			<version>1.2</version>
+		</dependency>
 
-    <!-- Test Dependencies -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-      <scope>test</scope>
-    </dependency>
-  <dependency>
-<groupId>com.google.appengine</groupId>
-<artifactId>appengine-api-1.0-sdk</artifactId>
-<version>1.9.55</version>
-</dependency>
-<dependency>
-<groupId>com.google.api-client</groupId>
-<artifactId>google-api-client</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.api-client</groupId>
-<artifactId>google-api-client-appengine</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.http-client</groupId>
-<artifactId>google-http-client-appengine</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.http-client</groupId>
-<artifactId>google-http-client</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.oauth-client</groupId>
-<artifactId>google-oauth-client</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.oauth-client</groupId>
-<artifactId>google-oauth-client-servlet</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.oauth-client</groupId>
-<artifactId>google-oauth-client-appengine</artifactId>
-<version>1.22.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.http-client</groupId>
-<artifactId>google-http-client-jackson2</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.http-client</groupId>
-<artifactId>google-http-client-jackson</artifactId>
-<version>1.28.0</version>
-</dependency>
-<dependency>
-<groupId>org.codehaus.jackson</groupId>
-<artifactId>jackson-core-asl</artifactId>
-<version>1.9.13</version>
-</dependency>
-<dependency>
-<groupId>com.fasterxml.jackson.core</groupId>
-<artifactId>jackson-core</artifactId>
-<version>2.9.4</version>
-</dependency>
-<dependency>
-<groupId>com.google.cloud</groupId>
-<artifactId>google-cloud-core</artifactId>
-<version>1.2.1</version>
-</dependency>
-<dependency>
-<groupId>com.google.cloud</groupId>
-<artifactId>google-cloud-core-http</artifactId>
-<version>1.2.1</version>
-</dependency>
-<dependency>
-<groupId>com.google.auth</groupId>
-<artifactId>google-auth-library-oauth2-http</artifactId>
-<version>0.7.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.auth</groupId>
-<artifactId>google-auth-library-credentials</artifactId>
-<version>0.7.0</version>
-</dependency>
-<dependency>
-<groupId>joda-time</groupId>
-<artifactId>joda-time</artifactId>
-<version>2.9.2</version>
-</dependency>
-<dependency>
-<groupId>org.json</groupId>
-<artifactId>json</artifactId>
-<version>20160810</version>
-</dependency>
-<dependency>
-<groupId>com.google.protobuf</groupId>
-<artifactId>protobuf-java</artifactId>
-<version>3.3.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.protobuf</groupId>
-<artifactId>protobuf-java-util</artifactId>
-<version>3.3.0</version>
-</dependency>
-<dependency>
-<groupId>com.google.guava</groupId>
-<artifactId>guava</artifactId>
-<version>24.1.1</version>
-</dependency>
-<dependency>
-<groupId>com.google.api</groupId>
-<artifactId>gax</artifactId>
-<version>1.4.1</version>
-</dependency>
-<dependency>
-<groupId>com.google.api</groupId>
-<artifactId>api-common</artifactId>
-<version>1.1.0</version>
-</dependency>
-<dependency>
-<groupId>org.threeten</groupId>
-<artifactId>threetenbp</artifactId>
-<version>1.3.3</version>
-</dependency>
-<dependency>
-<groupId>com.google.api.grpc</groupId>
-<artifactId>proto-google-common-protos</artifactId>
-<version>0.1.15</version>
-</dependency>
-<dependency>
-<groupId>com.google.http-client</groupId>
-<artifactId>google-http-client-protobuf</artifactId>
-<version>1.22.0</version>
-</dependency>
-  	<dependency>
-  		<groupId>org.openscience.cdk</groupId>
-  		<artifactId>cdk-bundle</artifactId>
-  		<version>2.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>mysql</groupId>
-  		<artifactId>mysql-connector-java</artifactId>
-  		<version>8.0.16</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.cloud.sql</groupId>
-  		<artifactId>mysql-socket-factory</artifactId>
-  		<version>1.0.13</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-simple</artifactId>
-  		<version>1.7.26</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.zaxxer</groupId>
-  		<artifactId>HikariCP</artifactId>
-  		<version>3.3.1</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.google.cloud.sql</groupId>
-  		<artifactId>jdbc-socket-factory-core</artifactId>
-  		<version>1.0.13</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.slf4j</groupId>
-  		<artifactId>slf4j-api</artifactId>
-  		<version>1.7.26</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>com.github.jnr</groupId>
-  		<artifactId>jnr-unixsocket</artifactId>
-  		<version>0.22</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openscience.cdk</groupId>
-  		<artifactId>cdk-core</artifactId>
-  		<version>2.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.openscience.cdk</groupId>
-  		<artifactId>cdk-interfaces</artifactId>
-  		<version>2.2</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>info.esblurock</groupId>
-  		<artifactId>JTherGas</artifactId>
-  		<version>1.0</version>
-  	</dependency>
-  </dependencies>
+		<!-- Test Dependencies -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-1.0-sdk</artifactId>
+			<version>1.9.55</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client-appengine</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-appengine</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-servlet</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.oauth-client</groupId>
+			<artifactId>google-oauth-client-appengine</artifactId>
+			<version>1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson2</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-jackson</artifactId>
+			<version>1.28.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.9.4</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-core</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-core-http</artifactId>
+			<version>1.2.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-oauth2-http</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.auth</groupId>
+			<artifactId>google-auth-library-credentials</artifactId>
+			<version>0.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.protobuf</groupId>
+			<artifactId>protobuf-java-util</artifactId>
+			<version>3.3.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>30.1-jre</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api</groupId>
+			<artifactId>gax</artifactId>
+			<version>1.4.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api</groupId>
+			<artifactId>api-common</artifactId>
+			<version>1.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.threeten</groupId>
+			<artifactId>threetenbp</artifactId>
+			<version>1.3.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.api.grpc</groupId>
+			<artifactId>proto-google-common-protos</artifactId>
+			<version>0.1.15</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.http-client</groupId>
+			<artifactId>google-http-client-protobuf</artifactId>
+			<version>1.22.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openscience.cdk</groupId>
+			<artifactId>cdk-bundle</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.16</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>mysql-socket-factory</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>1.7.26</version>
+		</dependency>
+		<dependency>
+			<groupId>com.zaxxer</groupId>
+			<artifactId>HikariCP</artifactId>
+			<version>3.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud.sql</groupId>
+			<artifactId>jdbc-socket-factory-core</artifactId>
+			<version>1.0.13</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.26</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.jnr</groupId>
+			<artifactId>jnr-unixsocket</artifactId>
+			<version>0.22</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openscience.cdk</groupId>
+			<artifactId>cdk-core</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.openscience.cdk</groupId>
+			<artifactId>cdk-interfaces</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>info.esblurock</groupId>
+			<artifactId>JTherGas</artifactId>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
 
-  <build>
-    <!-- for hot reload of the web application-->
-    <outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
-    <plugins>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>versions-maven-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <phase>compile</phase>
-            <goals>
-              <goal>display-dependency-updates</goal>
-              <goal>display-plugin-updates</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.3.0</version>
-        <configuration>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <archive>
-            <manifest>
-              <mainClass>thermo.LineCommands</mainClass>
-            </manifest>
-          </archive>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id> <!-- this is used for inheritance merges -->
-            <phase>package</phase> <!-- bind to the packaging phase -->
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+	<build>
+		<!-- for hot reload of the web application -->
+		<outputDirectory>${project.build.directory}/${project.build.finalName}/WEB-INF/classes</outputDirectory>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>versions-maven-plugin</artifactId>
+				<version>2.8.1</version>
+				<executions>
+					<execution>
+						<phase>compile</phase>
+						<goals>
+							<goal>display-dependency-updates</goal>
+							<goal>display-plugin-updates</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<mainClass>thermo.LineCommands</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 
-      <plugin>
-        <groupId>com.google.cloud.tools</groupId>
-        <artifactId>appengine-maven-plugin</artifactId>
-        <version>${appengine.maven.plugin.version}</version>
-      </plugin>
-    </plugins>
-  </build>
+			<plugin>
+				<groupId>com.google.cloud.tools</groupId>
+				<artifactId>appengine-maven-plugin</artifactId>
+				<version>${appengine.maven.plugin.version}</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
