Setup for new input format structure

--- a/JThermodynamicData/Jthermodyanamic.properties
+++ b/JThermodynamicData/Jthermodyanamic.properties
@@ -8,3 +8,55 @@ thermo.database.dbuser=root
 thermo.database.dbpassword=laguna
 #The thermodyanamics database
 thermo.database.connection=jdbc:mysql://localhost:3306/thermodynamics
+
+#Parameter keys
+thermo.parameter.thermo = Thermo
+thermo.parameter.thermoset = ThermoSet
+thermo.parameter.thermocompare = ThermoCompare
+
+# Standard Methods
+thermo.parameter.thergaskey = THERGAS
+thermo.parameter.thermkey = THERM
+thermo.parameter.bensonradicalkey = BensonRadical
+
+# Standard Input styles
+thermo.parameter.nancy = NANCY
+thermo.parameter.inchi = INCHI
+thermo.parameter.smiles = SMILES
+
+# String output formats
+thermo.parameter.stringout = Standard
+thermo.parameter.htmlout = html
+thermo.parameter.cvsout = cvs
+thermo.parameter.wikiout  = wiki
+thermo.parameter.formatout = readable
+	
+# String output detail
+thermo.parameter.total = total
+thermo.parameter.detailed = detailed
+thermo.parameter.summary = summary
+thermo.parameter.short = short
+
+# Input Parameter Names
+thermo.parameter.calclass = Calculation
+thermo.parameter.outformat = OutputFormat
+thermo.parameter.outdetail = OutputDetail
+thermo.parameter.outfile = OutputFile
+thermo.parameter.method = Method
+thermo.parameter.molform = MolForm
+thermo.parameter.moldescr = MolDescription
+thermo.parameter.molname = MolName
+
+// Thermodynamic Format Types
+thermo.parameter.nasa = NASA
+thermo.parameter.benson = Benson
+
+thermo.output.hf = Hf298
+thermo.output.sf = S298
+thermo.output.cp = Cp
+thermo.output.optical = Optical
+thermo.output.internal = Internal
+thermo.output.external = Exernal
+
+
+
