THERGAS printout of cvs and normal out debugged

--- a/JThermodynamicData/Jthermodyanamic.properties
+++ b/JThermodynamicData/Jthermodyanamic.properties
@@ -46,11 +46,15 @@ thermo.parameter.method = Method
 thermo.parameter.molform = MolForm
 thermo.parameter.moldescr = MolDescription
 thermo.parameter.molname = MolName
+thermo.parameter.compformat = OutForm
+thermo.parameter.compfile = File
 
 // Thermodynamic Format Types
 thermo.parameter.nasa = NASA
 thermo.parameter.benson = Benson
 
+thermo.output.name = Name
+thermo.output.reference = Reference
 thermo.output.hf = Hf298
 thermo.output.sf = S298
 thermo.output.cp = Cp
