Compiling,running without fault.. but wrong answer

--- a/JThermodynamicData/Jthermodyanamic.properties
+++ b/JThermodynamicData/Jthermodyanamic.properties
@@ -38,21 +38,24 @@ thermo.parameter.summary = summary
 thermo.parameter.short = short
 
 # Input Parameter Names
-thermo.parameter.calclass = Calculation
-thermo.parameter.outformat = OutputFormat
-thermo.parameter.outdetail = OutputDetail
-thermo.parameter.outfile = OutputFile
-thermo.parameter.method = Method
-thermo.parameter.molform = MolForm
-thermo.parameter.moldescr = MolDescription
-thermo.parameter.molname = MolName
+thermo.parameter.calclass   = Calculation
+thermo.parameter.outformat  = OutputFormat
+thermo.parameter.outdetail  = OutputDetail
+thermo.parameter.outfile    = OutputFile
+thermo.parameter.method     = Method
+thermo.parameter.molform    = MolForm
+thermo.parameter.moldescr   = MolDescription
+thermo.parameter.molname    = MolName
 thermo.parameter.compformat = OutForm
-thermo.parameter.compfile = File
+thermo.parameter.compfile   = File
+thermo.parameter.comparesrc   = CompareSource
+thermo.parameter.compareref   = CompareReference
 
-// Thermodynamic Format Types
+# Thermodynamic Format Types
 thermo.parameter.nasa = NASA
 thermo.parameter.benson = Benson
 
+# Heading titles
 thermo.output.name = Name
 thermo.output.reference = Reference
 thermo.output.hf = Hf298
