claning up csv output

--- a/JThermodynamicData/Jthermodyanamic.properties
+++ b/JThermodynamicData/Jthermodyanamic.properties
@@ -27,7 +27,7 @@ thermo.parameter.smiles = SMILES
 # String output formats
 thermo.parameter.stringout = Standard
 thermo.parameter.htmlout = html
-thermo.parameter.cvsout = cvs
+thermo.parameter.cvsout = csv
 thermo.parameter.wikiout  = wiki
 thermo.parameter.formatout = readable
 	
