Read in Benson Rules and thermodynamics cleanup and joules

--- a/JThermodynamicData/Jthermodyanamic.properties
+++ b/JThermodynamicData/Jthermodyanamic.properties
@@ -2,12 +2,16 @@
 thermo.types.name.thergasbenson=StandardThergasBenson
 #Standard temperature for Benson
 thermo.data.bensonstandard.temperatures=300,400,500,600,800,1000,1500
+# Constants
+thermo.data.calorietojoule=4.184
+thermo.data.gasconstant.clasmolsk=1.98587755
+
 #database user (for opening the connection)
 thermo.database.dbuser=root
 #The password for the databse
 thermo.database.dbpassword=laguna
 #The thermodyanamics database
-thermo.database.connection=jdbc:mysql://localhost:3306/thermodynamics
+thermo.database.connection=jdbc:mysql://localhost:3306/thermodynamics?serverTimezone=Europe/Rome
 
 #Parameter keys
 thermo.parameter.thermo = Thermo
@@ -50,10 +54,16 @@ thermo.parameter.compformat = OutForm
 thermo.parameter.compfile   = File
 thermo.parameter.comparesrc   = CompareSource
 thermo.parameter.compareref   = CompareReference
+thermo.parameter.energyunit   = EnergyUnit
 
 # Thermodynamic Format Types
 thermo.parameter.nasa = NASA
 thermo.parameter.benson = Benson
+
+# core energy unit
+thermo.parameter.calorie = calorie
+thermo.parameter.joule = joule
+thermo.parameter.energyunits = energy
 
 # Heading titles
 thermo.output.name = Name
