--- a/JThermodynamicData/pom.xml
+++ b/JThermodynamicData/pom.xml
@@ -221,6 +221,11 @@
 			<artifactId>JTherGas</artifactId>
 			<version>1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.xml.parsers</groupId>
+			<artifactId>jaxp-api</artifactId>
+			<version>1.4.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
