--- a/JThermodynamicData/.classpath
+++ b/JThermodynamicData/.classpath
@@ -21,7 +21,7 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/JTherGas"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="target/JThermodynamicData-1.0/WEB-INF/classes"/>
