--- a/JThermodynamicData/server.log4j-console.properties
+++ b/JThermodynamicData/server.log4j-console.properties
@@ -1,7 +1,7 @@
 # eposerver logger configuration
-log4j.rootLogger=DEBUG, debug-file, console
-log4j.logger.systrace=DEBUG, systrace-file
-log4j.logger.apptrace=DEBUG, apptrace-file
+log4j.rootLogger=WARN, debug-file, console
+log4j.logger.systrace=WARN, systrace-file
+log4j.logger.apptrace=WARN, apptrace-file
 log4j.logger.ntlogger=INFO, nt-events
 log4j.logger.httpclient.wire=INFO
 log4j.logger.org.apache.commons.httpclient=INFO
